<resources>
    <string name="app_name">MSC</string>
    <string name="new_task">New Task</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="logout">Logout</string>
    <string name="insert_location">Insert Location</string>
    <string name="insert_task">Insert Task Description</string>
    <string name="end_task">End Task</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="view_map">View Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBdRHPNBLQviiiN9R5GWnqFfRPfOZj9m6I</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="return_button">Return</string>
    <string name="username">"Username"</string>
    <string name="action_sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="switch_to_login">Already registered?</string>
    <string name="recover_account">Recover account</string>

    <string name="change_pwd">Change password</string>
    <string name="facebook_app_id">175209347037950</string>
    <string name="fb_login_protocol_scheme">fb175209347037950</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="back_button">Back</string>

</resources>
