<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/password"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"/>

        <EditText
            android:id="@+id/confirm_password"
            android:gravity="center"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>

        <Button
            android:id="@+id/confirm"
            android:layout_below="@+id/confirm_password"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/confirm"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_below="@id/confirm"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    </RelativeLayout>

</RelativeLayout>
