<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/user_mark"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/username"
            android:textColor="@color/design_default_color_primary_dark"
            android:layout_toRightOf="@id/user_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text=""/>

        <Button
            android:id="@+id/change_password"
            android:layout_below="@+id/user_mark"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/change_pwd"/>

        <Button
            android:id="@+id/back"
            android:layout_below="@+id/change_password"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/back_button"/>

        <fragment
            android:id="@+id/fragment"
            android:name="com.example.msc.ui.settings.BlankFragment"
            android:layout_below="@id/back"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    </RelativeLayout>

</RelativeLayout>
